--- a/index.html
+++ b/index.html
@@ -239,6 +239,8 @@ d3.json("md.json", function(error, ca) {
 d3.select(self.frameElement).style("height", height + "px");
 
 </script>
+    <p>Course: CMPS 165</p>
+    <p>Instructor: Suresh Lodha</p>
+    <p>Quarter: Fall 2.16</p>
     <p>Created by Wentian Bai and Wentan Bai</p>
-    <p>CMPS 165</p>
-    <p>Fall 2016</p>
+
